# comfyui_mcp

./: .dockerignore  .gitignore  .graphifyignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.claude-plugin/: plugin.json
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md  state.json
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: repo-workflow.instructions.md
.github/workflows/: ci.yml  docker.yml  pypi.yml
docs/: security-audit.md
docs/plans/: 2026-02-25-comfyui-mcp-design.md  2026-02-25-comfyui-mcp-implementation.md  2026-03-10-summarize-workflow-design.md  2026-03-10-workflow-from-image-design.md  2026-03-10-workflow-from-image-plan.md
docs/superpowers/plans/: 2026-03-10-websocket-progress.md  2026-03-10-workflow-composition.md  2026-03-11-model-download.md  2026-04-01-comprehensive-review-fixes.md  2026-05-10-jobs-api-and-targeted-interrupt.md  2026-05-10-mcp-best-practices-cleanup.md  2026-05-10-upstream-api-updates.md  (+1 more)
evals/: 2026-05-11-comfyui-mcp-v1.jsonl  2026-05-11-comfyui-mcp-v1.xml  2026-05-11-report-gpt-oss-120b-v2.md  2026-05-11-report-gpt-oss-120b.md  2026-05-12-comfyui-mcp-phase5.jsonl  comfyui_mcp_task.py
hooks/: hooks.json  security-warning.sh
scripts/: compare_evals.py  run_eval_ollama.py  run_multimodel_eval.py  smoke_test.py
skills/history/: SKILL.md
skills/models/: SKILL.md
skills/progress/: SKILL.md
skills/status/: SKILL.md
skills/troubleshooting/: SKILL.md
skills/workflow/: SKILL.md
skills/workflows/: SKILL.md
src/comfyui_mcp/: __init__.py  audit.py  client.py  config.py  model_manager.py  model_registry.py  node_manager.py  pagination.py  progress.py  server.py
tests/: test_audit.py  test_blocked_endpoints.py  test_client.py  test_config.py  test_download_validator.py  test_inspector.py  test_integration.py  test_model_checker.py  test_model_manager.py  test_model_registry.py  test_node_auditor.py  test_node_manager.py  test_pagination.py  test_progress.py  test_rate_limit.py  test_sanitizer.py  test_security_invariants.py  test_server.py  test_tools_discovery.py  test_tools_files.py  test_tools_generation.py  test_tools_history.py  test_tools_jobs.py  test_tools_models.py  test_tools_nodes.py  test_tools_workflow.py  test_workflow_operations.py  test_workflow_templates.py  test_workflow_validation.py
(+24 files in other folders)
