[project]
name = "comfyui-mcp"
version = "0.1.0"
description = "Secure MCP server for ComfyUI with workflow inspection and audit logging"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.12.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
comfyui-mcp = "comfyui_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comfyui_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
]
